Revision history for Perl extension ExtUtils::CBuilder.

0.16

 - Fix quoting of command line arguments on Windows. [Yitzchak
   Scott-Thoennes]

 - Documented the existing 'quiet' parameter, which silences the
   printing of system() commands. [Suggested by Yitzchak
   Scott-Thoennes]

0.15  Mon Oct  3 17:10:32 CDT 2005

 - Several OS/2 fixes have been made, including: 1) adding the
   necessary version string to DLLs, 2) passing the executable's name
   to 'ldopts' without the .exe extension, 3) avoiding calling 'env'
   via the 'shrpenv' thingy, since it triggers a fork() bug. [Ilya
   Zakharevich]

 - Integrate a couple cleanup-related changes from bleadperl that
   somehow never got into this copy. [Steve Hay]

 - Added a new 'defines' parameter to compile(), which gives a
   platform-independant way to specify various -Dfoo=bar (or the
   equivalent) compiler defines. [Randy W. Sims]

0.14  Mon Sep 19 13:40:37 CDT 2005

 - Several fixes have been made for VMS, including: 1) there can only
   be one /include qualifier, so merge multiple /includes into one; 2)
   make sure the executable is named the same way that dynaloader will
   look for it; 3) make sure the option files for the exported symbols
   and the PERLSHR image are passed properly to the linker. [John
   E. Malmberg]

0.13  Wed Aug 24 20:05:59 CDT 2005

 - Several temporary files weren't being cleaned up during testing,
   because the 'cleanup' mechanism was never properly implemented.
   This is now fixed. [Steve Hay]

0.12  Mon May 30 16:40:10 CDT 2005

 - In order to integrate into the perl core, patches were contributed
   that a) put a $VERSION variable in each .pm file, b) add a 'quiet'
   parameter to new() to shut up some of the command-echoing, c)
   checks for the perl source headers in the CORE/ directory in the
   perl source tree, not in the post-installation location, and d)
   adjusts the CWD when running the regression tests under the perl
   core. [Yitzchak Scott-Thoennes]
